--- a/style.css
+++ b/style.css
@@ -8,3 +8,8 @@
 .map{
     background: linear-gradient(#e66465, #9198e5);
 }
+@media (max-width: 576px){
+    .navbar-toggler{
+        display: flex;
+    }
+}
